# API-Middleware-Context-Control-system

./: .dockerignore  .env.example  .gitignore  ADAPTIVE_SUMMARIZATION_IMPLEMENTATION.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  PROJECT_STATUS.md  QUICKSTART.md  QUICK_DEPLOY_SETUP.md  README.md  REASONING_MODEL_SUPPORT.md  STRATEGY_IMPLEMENTATION_SUMMARY.md  STREAMING_IMPLEMENTATION.md  SUMMARIZATION_CONFIG_GUIDE.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup-auto-deploy.sh  test_adaptive_summarization_basic.py  test_config_update.py  test_manual.py  test_streaming.py  快速开始.md  自动部署说明.md  配置详解.md
.github/workflows/: auto-deploy.yml
.kiro/specs/api-middleware-context-control/: design.md  requirements.md  tasks.md
config/: config.example.multi-provider.yaml  config.yaml
docs/: API.md  AUTO_DEPLOY.md  MULTI_PROVIDER_CONFIG.md  STREAMING.md
examples/: reasoning_model_example.py
src/: __init__.py  main.py
src/api/: __init__.py  app.py  endpoints.py
src/core/: __init__.py  adaptive_summarization_manager.py  config_loader.py  config_validator.py  content_analyzers.py  context_manager.py  importance_scorer.py  provider_manager.py  session_manager.py
src/core/strategies/: __init__.py  hierarchical_strategy.py  incremental_strategy.py  selective_strategy.py
src/models/: __init__.py  adaptive_summarization.py  config.py  openai.py  session.py
src/utils/: __init__.py  logger.py  response_diagnostics.py
tests/: __init__.py  test_integration.py  test_reasoning_models.py  test_response_diagnostics_basic.py  test_streaming.py
